fixed checklist on mobile

--- a/Appetizer/style.css
+++ b/Appetizer/style.css
@@ -682,8 +682,8 @@ body > a img {
 }
 
 .check-label{
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: auto 1fr;
   align-items: center;
   gap: 0.5rem;
 }
@@ -719,6 +719,7 @@ body > a img {
 
 .hidden-box:checked + .check-label .check-box{
   background: var(--red-500);
+  border: 1px solid var(--red-500);
 }
 
 .hidden-box:checked + .check-label .check-box:after{
@@ -925,6 +926,13 @@ body > a img {
 }
 
 @media (max-width: 768px) {
+  .hidden-box:checked + .check-label .check-text {
+    color: var(--blue-200);
+    background-size: 0;
+    text-decoration-line: line-through;
+    text-decoration-color: var(--red-500);
+  }
+  
   .tips-section {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(4, 1fr);
